sgd/reproduction/playground/objects/SVMXC__Dispatcher_Access__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to determine the scope of territories and service teams a dispatcher sees in dispatch console. This is especially useful for large organizations with multiple dispatchers where each dispatcher operates within a set of territories and service teams</description>
    <fields>
        <fullName>SVMXC__Dispatcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the dispatcher that can dispatch to this team or territory. Reference to an existing Salesforce user</description>
        <label>Dispatcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dispatcher_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Service Team to grant access to. Reference to an existing Service Team record in ServiceMax</description>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Dispatcher Access</relationshipLabel>
        <relationshipName>Dispatcher_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Territory to grant access to. Reference to an existing Territory record in ServiceMax</description>
        <label>Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Dispatcher Access</relationshipLabel>
        <relationshipName>Dispatcher_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dispatcher Access</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatcher Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>